feat: update input placeholder and remove unused package-lock.json

--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -20,8 +20,8 @@
       </figure>
       <h1 class="title font-bitcount">Amigo Secreto</h1>
       <div class="form-group">
-        <input type="text" class="form-control" id="add-item-input">
-        <button class="input-addon" id="add-item-button">Agregar</button>
+        <input type="text" class="form-control" id="add-item-input" placeholder="Ingresa el nombre de tu amigo (Enter)" />
+        <button type="button" class="input-addon" id="add-item-button">Agregar</button>
       </div>
       <div class="list-container">
         <ul class="list" id="list">
